# CogniHub

./: .gitignore  AGENTS.md  README.md  TOOL_INVESTIGATION_REPORT.md  pyproject.toml  requirements.txt  test_agent.py  test_tool_contract.py
archives/backup/: app.py  chatstore.py  config.py  ragstore.py  researchstore.py  router_tui.py  webstore.py
data/: chat.sqlite3  rag.sqlite3  research.sqlite3  web.sqlite3
docs/: BACKGROUND_SERVERS.md  HYBRID_CLEAN.md  HYBRID_FINAL.md  HYBRID_INFERENCE.md  INTENT_ROUTING.md  QUICKREF.md  README_Windows.md  SERVERS.md  TUI_README.md  how-contextharbor-works.md
modules/: README.md
modules/agents/: README.md
modules/plugins/: README.md
modules/plugins/example_plugin/: README.md  pyproject.toml
modules/plugins/example_plugin/contextharbor_example_plugin/: plugin.py
monorepo/scripts/: setup_env.py
scripts/: doctor.py  install-service.sh  manage_server.bat  manage_server.sh  run_agent.sh  run_tui.bat  run_tui.ps1  run_tui.sh  servers.bat  servers.ps1  servers.sh  setup.bat  setup_env.py  setup_hybrid_ollama.sh  setup_links.py
src/cognihub/: app.py  config.py
src/cognihub/services/: rag_routing.py  rerank.py  retrieval.py
src/cognihub/stores/: ragstore.py
src/router_phase1/: app.py
src/router_phase1/stores/: ragstore.py
static/: app.js  index.html  styles.css
systemd/: contextharbor.service  ollama-cpu@.service  ollama-gpu@.service
tests/: test_additional_tools.py
web/static/: app.js
