[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "contextharbor-example-plugin"
version = "0.1.0"
description = "Example ContextHarbor tool plugin"
requires-python = ">=3.11"
dependencies = [
  "contextharbor",
  "pydantic>=2.6.0",
]

[tool.setuptools]
packages = ["contextharbor_example_plugin"]
